fix (View) : 다음줄로 넘어가는 문자를 모두 String.format("%n") 문자로 통일함